src/components/thread/index.module.scss
@import "../../style/variables.scss";

.thread {
  transition: border-color 0.2s ease;
  border-color: #dcdbd7;
  text-align: left;
  width: 100%;
  max-width: 600px;
}

.message {
  background: white;
  border-radius: 2px;
  display: block;
  position: relative;
  padding: 1rem;
  border: 3px solid #dcdbd7;
  width: 100%;
  text-align: left;
  // white-space: pre-wrap; // Could come back and enable white space
}

.question {
  font-weight: 500;
  background: white;
  color: $color-primary;
  font-style: italic;
}

.answerWrapper {
  margin-left: 2rem;

  // Cover up the question box border
  position: relative;
  top: -3px;
  left: 0;
}

.answer {
  background: white;
  border: 3px solid #dcdbd7;
  border-top: none;
  border-bottom: none;
  position: relative;

  // Divider between responses
  &:before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 1px;
    width: 100%;
    background: #dcdbd7;
    opacity: 0.5;
  }

  &.answerLast {
    border-bottom: 3px solid #dcdbd7;
  }
}

.thread--active .question,
.thread--active .answer {
  border-color: #009aed;
}

.messageRight {
  & .message {
  }
}

.timestamp {
  font-size: 0.75rem;
  font-weight: 400;
  margin-bottom: 0.25rem;
  color: $text-color-light;
  font-style: normal;
}

// http://ilikepixels.co.uk/drop/bubbler/
// &:after {
//   content: "";
//   position: absolute;
//   border-style: solid;
//   border-width: 13px 15px 13px 0;
//   border-color: transparent #ffffff;
//   display: block;
//   width: 0;
//   z-index: 1;
//   margin-top: -13px;
//   left: -15px;
//   top: 50%;
// }

// &:before {
//   content: "";
//   position: absolute;
//   border-style: solid;
//   border-width: 15px 17px 15px 0;
//   border-color: transparent #dcdbd7;
//   display: block;
//   width: 0;
//   z-index: 0;
//   margin-top: -15px;
//   left: -20px;
//   top: 50%;
// }

